apps/home/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: home-assistant
spec: {}
status: {}
