apps/home/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: home-assistant
    spec:
      containers:
        - image: homeassistant/home-assistant:2025.6
          name: home-assistant
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_ADMIN
            privileged: true
          ports:
            - containerPort: 8123
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: home-assistant-config
            - mountPath: /etc/localtime
              name: home-assistant-localtime
              readOnly: true
            - mountPath: /run/dbus
              name: home-assistant-dbus
            - mountPath: /media
              name: home-assistant-media
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: home-assistant-localtime
          persistentVolumeClaim:
            claimName: home-assistant-localtime
            readOnly: true
        - name: home-assistant-dbus
          hostPath:
            path: /run/dbus
        - name: home-assistant-media
          hostPath:
            path: /media/home-assistant
status: {}
