apps/home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - name: http
      port: 8123
      protocol: TCP
  selector:
    app: home-assistant
  type: LoadBalancer
status:
  loadBalancer: {}
