apps/home/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - host: home-assistant.home.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
    - host: home.bartektelechome.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-tailscale
  namespace: home-assistant
  annotations:
    spec.ingressClassName: tailscale
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - home.deer-truck.ts.net
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
